spectec/test/elab/neg/type-typ-invalid-tparam.spectec
;; A typdef's type-parameter identifier carries a numeric suffix
;; that strip_var_suffix would remove.

syntax foo<T_1> = nat
